hphp/test/zend/good/ext/mysqli/tests/mysqli_autocommit.php.skipif
<?php
	require_once('skipif.inc');
	require_once('skipifemb.inc');
	require_once('connect.inc');
	require_once('skipifconnectfailure.inc');

	if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket)) {
		die(sprintf("skip Cannot connect to the server using host=%s, user=%s, passwd=***, dbname=%s, port=%s, socket=%s\n",
			$host, $user, $db, $port, $socket));
	}

	if (!have_innodb($link))
		die(sprintf("Needs InnoDB support, [%d] %s", $link->errno, $link->error));
?>